<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_synthesizer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.popal94143.synthesizer.SynthesizerActivity">

    tile

    <Button
        android:text="@string/Challenge5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Challenge5"
        android:layout_below="@+id/Challenge2"
        android:layout_alignParentStart="true"
        android:onClick="onChallenge5Click" />

    <Button
        android:text="@string/Challenge7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Challenge7"
        android:layout_below="@+id/Challenge5"
        android:layout_alignParentStart="true"
        android:onClick="onChallenge7Click" />

    <Button
        android:text="@string/Challenge12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Challenge12"
        android:layout_below="@+id/Challenge7"
        android:layout_alignParentStart="true"
        android:onClick="onChallenge12Click" />

    <Button
        android:text="@string/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/Challenge12"
        android:layout_alignEnd="@+id/Challenge7"
        android:onClick="onReset (SynthesizerActivity)" />

    <Button
        android:text="Start Song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:onClick="onStart (SynthesizerActivity)" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bButton"
        android:id="@+id/bButton"
        android:onClick="onButton3Click"
        android:layout_below="@+id/fButton"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fButton"
        android:id="@+id/fButton"
        android:onClick="onButton2Click"
        android:layout_below="@+id/eButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="A Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true" />

    <Button
        android:text="@string/Challenge2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Challenge2"
        android:onClick="onChallenge2Click"
        android:layout_below="@+id/bButton"
        android:layout_alignStart="@+id/button" />

    <Button
        android:text="@string/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:onClick="onANoteClick" />

    <TextView
        android:text="B Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_below="@+id/button3"
        android:layout_alignStart="@+id/textView2" />

    <Button
        android:text="@string/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/button3"
        android:id="@+id/button4"
        android:onClick="onBNoteClick" />

    <TextView
        android:text="BB Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/textView4" />

    <Button
        android:text="@string/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/button4"
        android:id="@+id/button5"
        android:onClick="onBBNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="C Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button5"
        android:layout_alignStart="@+id/textView4"
        android:id="@+id/textView5" />

    <Button
        android:text="@string/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/button5"
        android:id="@+id/button6"
        android:onClick="onCNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="C Sharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button6"
        android:layout_alignStart="@+id/textView5"
        android:id="@+id/textView6" />

    <Button
        android:text="@string/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/button6"
        android:id="@+id/button7"
        android:onClick="onCSharpNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="D Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button7"
        android:layout_alignStart="@+id/textView6"
        android:id="@+id/textView7" />

    <Button
        android:text="@string/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView7"
        android:layout_alignStart="@+id/button7"
        android:id="@+id/button8"
        android:onClick="onDNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="D Sharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_alignStart="@+id/textView7"
        android:id="@+id/textView8" />

    <Button
        android:text="@string/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/button8"
        android:id="@+id/button9"
        android:onClick="onDSharpNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="E Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="34dp"
        android:id="@+id/textView9" />

    <Button
        android:text="@string/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="14dp"
        android:id="@+id/button10"
        android:onClick="onENoteClick (SynthesizerActivity)" />

    <TextView
        android:text="F Sharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button10"
        android:layout_alignStart="@+id/textView9"
        android:id="@+id/textView10" />

    <Button
        android:text="@string/button11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button11"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/button10"
        android:onClick="onFSharpNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="G Note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button11"
        android:layout_alignStart="@+id/textView10"
        android:id="@+id/textView11" />

    <Button
        android:text="@string/button12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView11"
        android:layout_alignEnd="@+id/button11"
        android:id="@+id/button12"
        android:onClick="onGNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="G Sharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button12"
        android:layout_alignStart="@+id/textView11"
        android:id="@+id/textView12" />

    <Button
        android:text="@string/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button13"
        android:layout_below="@+id/textView12"
        android:layout_alignStart="@+id/button12"
        android:onClick="onGSharpNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="High E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button13"
        android:layout_alignStart="@+id/textView12"
        android:id="@+id/textView13" />

    <Button
        android:text="@string/button14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView13"
        android:layout_alignStart="@+id/button13"
        android:id="@+id/button14"
        android:onClick="onHighENoteClick (SynthesizerActivity)" />

    <TextView
        android:text="High F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button14"
        android:layout_alignEnd="@+id/textView13"
        android:id="@+id/textView14" />

    <Button
        android:text="@string/button15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView14"
        android:layout_alignStart="@+id/button14"
        android:id="@+id/button15"
        android:onClick="onHighFNoteClick (SynthesizerActivity)" />

    <Button
        android:text="@string/button16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignEnd="@+id/button15"
        android:id="@+id/button16"
        android:onClick="onHighFSharpNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="High F Sharp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView15"
        android:layout_below="@+id/button15"
        android:layout_alignEnd="@+id/button15" />

    <Button
        android:text="@string/button17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button17"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button"
        android:onClick="onHighGNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="High G"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button9"
        android:layout_toEndOf="@+id/button17"
        android:id="@+id/textView" />

    <Button
        android:text="@string/button18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button18"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/textView14"
        android:onClick="onFNoteClick (SynthesizerActivity)" />

    <TextView
        android:text="F note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView16"
        android:layout_below="@+id/button16"
        android:layout_alignEnd="@+id/textView12" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eButton"
        android:id="@+id/eButton"
        android:onClick="onButton1Click"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>

